--- a/react/react-guide/src/App.css
+++ b/react/react-guide/src/App.css
@@ -23,6 +23,14 @@
   font-size: large;
 }
 
+.red {
+  color: red;
+}
+
+.bold {
+  font-weight: bold;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
