--- a/node/web-server/templates/views/help/index.hbs
+++ b/node/web-server/templates/views/help/index.hbs
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="/css/styles.css" />
 </head>
 <body>
-  <h1>{{title}}</h1>
+  {{>header}}
   <p>
     {{message}}
   </p>
