--- a/node/web-server/templates/views/index.hbs
+++ b/node/web-server/templates/views/index.hbs
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
-    <h1>{{title}}</h1>
+    {{>header}}
   </body>
 </html>
