--- a/node/web-server/templates/views/index.hbs
+++ b/node/web-server/templates/views/index.hbs
@@ -6,6 +6,7 @@
       {{name}}
     </title>
     <link rel="stylesheet" href="/css/styles.css" />
+    <script src="/js/app.js"></script>
   </head>
   <body>
     {{>header}}
