--- a/node/web-server/templates/views/index.hbs
+++ b/node/web-server/templates/views/index.hbs
@@ -6,10 +6,22 @@
       {{name}}
     </title>
     <link rel="stylesheet" href="/css/styles.css" />
-    <script src="/js/app.js"></script>
+    <script src="/js/app.js" defer></script>
   </head>
   <body>
-    {{>header}}
+    <div class="main-content">
+        {{>header}}
+
+        <p>
+          Enter your location to get the weather.
+        </p>
+
+        <form id="form">
+          <input placeholder="Your city"/>
+          <button>Search</button>
+        </form>
+    </div>
+
     {{>footer}}
   </body>
 </html>
