add elements for displaying output of query

--- a/node/web-server/templates/views/index.hbs
+++ b/node/web-server/templates/views/index.hbs
@@ -20,6 +20,13 @@
           <input placeholder="Your city"/>
           <button>Search</button>
         </form>
+
+        <p id="pOne">
+
+        </p>
+        <p id="pTwo">
+
+        </p>
     </div>
 
     {{>footer}}
