--- a/node/web-server/public/css/styles.css
+++ b/node/web-server/public/css/styles.css
@@ -1,7 +1,50 @@
 h1 {
-  color: red;
-}
+  color: #444; }
 
 body {
-  font-family: arial;
-}
+  font-family: arial; }
+
+@media only screen and (min-width: 200px) {
+  .main-content {
+    width: 100vw;
+    margin-left: 0; }
+    .main-content p {
+      font-size: 1.2em; } }
+@media only screen and (min-width: 768px) {
+  .main-content {
+    width: 80vw;
+    margin-left: 10vw; } }
+@media only screen and (min-width: 1200px) {
+  .main-content {
+    width: 60vw;
+    margin-left: 20vw; } }
+
+#page-title {
+  font-size: 2.2em; }
+
+#footer {
+  position: fixed;
+  bottom: 0;
+  left: 20vw;
+  right: 20vw;
+  top: 95vh;
+  color: #aaa;
+  border-top: 1px solid #aaa; }
+  @media only screen and (min-width: 200px) {
+    #footer {
+      left: 0;
+      right: 0; } }
+
+button {
+  border: 0px;
+  background-color: #999;
+  color: white;
+  font-size: 1.2em;
+  height: 1.8em; }
+
+input {
+  border: 1px solid #999;
+  height: 1.6em;
+  font-size: 1.2em; }
+
+/*# sourceMappingURL=styles.css.map */
