--- a/node/chat-app/public/css/sass/styles.scss
+++ b/node/chat-app/public/css/sass/styles.scss
@@ -15,5 +15,9 @@ $text1: #fff;
 $text2: #dedede;
 $accent1: #57688f;
 
+// Fonts
+$tsFont: Courier New;
+$chatFont: Lucida Sans Unicode;
+
 // Paths
 $images: "../images/"
