--- a/node/chat-app/public/css/styles.css
+++ b/node/chat-app/public/css/styles.css
@@ -1,5 +1,11 @@
 /***
     Variables
 ***/
+/***
+    Styles
+***/
+.timestamp {
+  opacity: 0.8;
+  font-size: 0.8em; }
 
 /*# sourceMappingURL=styles.css.map */
