--- a/node/chat-app/public/css/sass/styles.scss
+++ b/node/chat-app/public/css/sass/styles.scss
@@ -20,4 +20,15 @@ $tsFont: Courier New;
 $chatFont: Lucida Sans Unicode;
 
 // Paths
-$images: "../images/"
+$images: "../images/";
+
+
+
+/***
+    Styles
+***/
+
+.timestamp {
+  opacity: 0.8;
+  font-size: 0.8em;
+}
