--- a/react/indecision-app/src/sass/main.scss
+++ b/react/indecision-app/src/sass/main.scss
@@ -1,5 +1,3 @@
-$color: blue;
-
-* {
-  color: $color;
-}
+// Base Styles
+//=====================================================
+@import './base/base';
