import header component sass

--- a/react/indecision-app/src/sass/main.scss
+++ b/react/indecision-app/src/sass/main.scss
@@ -1,3 +1,7 @@
 // Base Styles
 //=====================================================
 @import './base/base';
+
+// Component Styles
+//=====================================================
+@import './components/header'
