--- a/react/indecision-app/src/sass/components/_header.scss
+++ b/react/indecision-app/src/sass/components/_header.scss
@@ -2,4 +2,10 @@
   background: #20222b;
   margin-bottom: 4.8rem;
   padding: 1.6rem 0;
+  color: white;
+}
+
+.header__title {
+  font-size: 3.2rem;
+  margin: 0;
 }
