add styles for header__subtitle

--- a/react/indecision-app/src/sass/components/_header.scss
+++ b/react/indecision-app/src/sass/components/_header.scss
@@ -9,3 +9,10 @@
   font-size: 3.2rem;
   margin: 0;
 }
+
+.header__subtitle {
+  color: #a5afd7;
+  font-size: 1.6rem;
+  font-weight: 500;
+  margin: 0;
+}
