create settings sass file for constants

--- a/react/indecision-app/src/sass/main.scss
+++ b/react/indecision-app/src/sass/main.scss
@@ -1,7 +1,16 @@
+// Config
+//=====================================================
+
+@import './base/settings';
+
+
 // Base Styles
 //=====================================================
+
 @import './base/base';
+
 
 // Component Styles
 //=====================================================
+
 @import './components/header'
