--- a/react/indecision-app/src/sass/components/_header.scss
+++ b/react/indecision-app/src/sass/components/_header.scss
@@ -1,7 +1,7 @@
 .header {
   background: $off-black;
   margin-bottom: 4.8rem;
-  padding: 1.6rem 0;
+  padding: $m-size 0;
   color: white;
 }
 
@@ -12,7 +12,7 @@
 
 .header__subtitle {
   color: $off-white;
-  font-size: 1.6rem;
+  font-size: $m-size;
   font-weight: 500;
   margin: 0;
 }
