--- a/react/indecision-app/src/sass/components/_header.scss
+++ b/react/indecision-app/src/sass/components/_header.scss
@@ -1,12 +1,12 @@
 .header {
   background: $off-black;
-  margin-bottom: 4.8rem;
+  margin-bottom: $xl-size;
   padding: $m-size 0;
   color: white;
 }
 
 .header__title {
-  font-size: 3.2rem;
+  font-size: $l-size;
   margin: 0;
 }
 
