add container component file and styles

--- a/react/indecision-app/src/sass/main.scss
+++ b/react/indecision-app/src/sass/main.scss
@@ -13,4 +13,6 @@
 // Component Styles
 //=====================================================
 
-@import './components/header'
+@import
+  './components/container',
+  './components/header';
