--- a/react/indecision-app/src/sass/base/_base.scss
+++ b/react/indecision-app/src/sass/base/_base.scss
@@ -7,3 +7,11 @@ body {
   font-size: $m-size;
   background: $dark-blue;
 }
+
+button {
+  cursor: pointer;
+
+  &:disabled {
+    cursor: default;
+  }
+}
