--- a/react/indecision-app/src/sass/components/_button.scss
+++ b/react/indecision-app/src/sass/components/_button.scss
@@ -13,3 +13,13 @@
     opacity: 0.5;
   }
 }
+
+
+.button {
+  background: $purple;
+  border: none;
+  border-bottom: .3rem solid darken($purple, 10%);
+  color: white;
+  font-weight: 500;
+  padding: $s-size;
+}
