--- a/react/indecision-app/src/sass/components/_button.scss
+++ b/react/indecision-app/src/sass/components/_button.scss
@@ -23,3 +23,11 @@
   font-weight: 500;
   padding: $s-size;
 }
+
+
+.button--link {
+  background: none;
+  border: none;
+  color: $off-white;
+  padding: 0;
+}
