--- a/react/indecision-app/src/sass/main.scss
+++ b/react/indecision-app/src/sass/main.scss
@@ -16,4 +16,5 @@
 @import
   './components/container',
   './components/header',
-  './components/button';
+  './components/button',
+  './components/widget';
