--- a/react/indecision-app/src/sass/components/_widget.scss
+++ b/react/indecision-app/src/sass/components/_widget.scss
@@ -1,3 +1,11 @@
 .widget-header {
   background: $blue;
+  color: $off-white;
+  padding: $m-size;
+  display: flex;
+  justify-content: space-between;
+
+  h3 {
+    margin: 0;
+  }
 }
