--- a/react/indecision-app/src/sass/components/_widget.scss
+++ b/react/indecision-app/src/sass/components/_widget.scss
@@ -3,6 +3,15 @@
     display: inline-block;
     width: 100%;
     margin-bottom: $xl-size;
+
+    .message {
+      text-align: center;
+      $font-size: $m-size;
+      color: $off-white;
+      margin: none;
+      padding: $l-size;
+      border-bottom: 1px solid lighten($light-blue, 10%);
+    }
 }
 
 
