add option class and styles for Option component

--- a/react/indecision-app/src/sass/main.scss
+++ b/react/indecision-app/src/sass/main.scss
@@ -17,4 +17,5 @@
   './components/container',
   './components/header',
   './components/button',
-  './components/widget';
+  './components/widget',
+  './components/option';
