--- a/react/indecision-app/src/sass/main.scss
+++ b/react/indecision-app/src/sass/main.scss
@@ -14,6 +14,7 @@
 //=====================================================
 
 @import
+  './components/add-option',
   './components/container',
   './components/header',
   './components/button',
