--- a/react/indecision-app/src/sass/components/_widget.scss
+++ b/react/indecision-app/src/sass/components/_widget.scss
@@ -11,6 +11,7 @@
       margin: none;
       padding: $l-size;
       border-bottom: 1px solid lighten($light-blue, 10%);
+      margin-bottom: 0;
     }
 }
 
