--- a/react/indecision-app/src/sass/components/_add-option.scss
+++ b/react/indecision-app/src/sass/components/_add-option.scss
@@ -4,6 +4,12 @@
 
   input {
     flex-grow: 1;
+    background: $dark-blue;
+    border: none;
+    border-bottom: .3rem solid darken($dark-blue, 10%);
+    margin-right: $s-size;
+    color: $off-white;
+    padding: $s-size;
   }
 }
 
