bug fix: properly import components

--- a/react/indecision-app/src/sass/main.scss
+++ b/react/indecision-app/src/sass/main.scss
@@ -14,7 +14,7 @@
 //=====================================================
 
 @import
-  './components/modal'
+  './components/modal',
   './components/add-option',
   './components/container',
   './components/header',
