--- a/react/indecision-app/src/sass/components/_modal.scss
+++ b/react/indecision-app/src/sass/components/_modal.scss
@@ -4,6 +4,9 @@
 
 .ReactModalPortal .ReactModal__Overlay {
   transition: opacity 200ms ease-in-out;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .ReactModalPortal .ReactModal__Overlay--after-open {
@@ -12,4 +15,8 @@
 
 .ReactModalPortal .ReactModal__Overlay--before-close {
   opacity: 0;
+}
+
+.modal {
+  background: $light-blue;
 }
