--- a/react/indecision-app/src/sass/components/_modal.scss
+++ b/react/indecision-app/src/sass/components/_modal.scss
@@ -19,4 +19,9 @@
 
 .modal {
   background: $light-blue;
+  color: white;
+  max-width: 30rem;
+  outline: none;
+  padding: $l-size;
+  text-align: center;
 }
