--- a/react/indecision-app/src/sass/components/_modal.scss
+++ b/react/indecision-app/src/sass/components/_modal.scss
@@ -25,3 +25,14 @@
   padding: $l-size;
   text-align: center;
 }
+
+.modal__title {
+  margin: 0 0 $m-size 0;
+}
+
+.modal__body {
+  margin: 0 0 $m-size 0;
+  font-size: 2rem;
+  font-weight: 300;
+  word-wrap: break-word;
+}
